src/objects/Client__c.object
<CustomObject>
    <description>This is the object</description>
    <fields>
        <fullName>Client_code__c</fullName>
        <description>This is unique code of each client</description>
        <displayFormat>CL-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Client code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This contains info of client</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_ID__c</fullName>
        <description>Email address of client</description>
        <label>Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile_number__c</fullName>
        <description>Contact no of client</description>
        <label>Mobile number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Point_of_contact__c</fullName>
        <description>The place where client can meet</description>
        <label>Point of contact</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Client</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>